--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"C:\\Users\\internousdev\\Desktop\\workspace\\workspace-matsumoto\\test\\Person","type":"PROJECT","hints":{"PROJECT_NAME":"Person"}},"ABSENT"],[{"location":"C:\\pleiades\\java\\8","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"]]
+[[{"location":"C:\\pleiades\\java\\8","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"],[{"location":"C:\\Users\\internousdev\\Desktop\\workspace\\workspace-matsumoto\\test\\Capsule","type":"PROJECT","hints":{"PROJECT_NAME":"Capsule"}},"ABSENT"]]
